// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JoinThrivingSection should render with many props assigned 1`] = `
<section
  className="test-class JoinThrivingSection Section white"
  style={Object {}}
>
  <h2
    className="Heading slate"
    id=""
  >
    Join Our Thriving Community
  </h2>
  <div
    className="content undefined"
  >
    <p
      className="centerText"
    >
      Are you ready to begin your journey towards a career in software development?
      <br />
      Get the support you need by joining our members only Slack community!
    </p>
    <div
      className="alignCenter marginBottom"
    >
      <div>
        <input
          placeholder="Email address"
        />
        <button
          className="Button primary"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <span>
            Join our Slack
          </span>
        </button>
      </div>
      Slack is a community based collaboration tool where all the magic happens!
      <br />
      <a
        href="https://slack.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screenReaderOnly"
        >
          Opens in new window
        </span>
        Learn more
        <test-file-mock
          className="externalLinkIcon"
        />
      </a>
    </div>
  </div>
</section>
`;

exports[`JoinThrivingSection should render with required props 1`] = `
<section
  className="JoinThrivingSection Section white"
  style={Object {}}
>
  <h2
    className="Heading slate"
    id=""
  >
    Join Our Thriving Community
  </h2>
  <div
    className="content undefined"
  >
    <p
      className="centerText"
    >
      Are you ready to begin your journey towards a career in software development?
      <br />
      Get the support you need by joining our members only Slack community!
    </p>
    <div
      className="alignCenter marginBottom"
    >
      <div>
        <input
          placeholder="Email address"
        />
        <button
          className="Button primary"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <span>
            Join our Slack
          </span>
        </button>
      </div>
      Slack is a community based collaboration tool where all the magic happens!
      <br />
      <a
        href="https://slack.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screenReaderOnly"
        >
          Opens in new window
        </span>
        Learn more
        <test-file-mock
          className="externalLinkIcon"
        />
      </a>
    </div>
  </div>
</section>
`;
